--- a/app/src/main/assets/menu.html
+++ b/app/src/main/assets/menu.html
@@ -74,7 +74,7 @@
     });
 
     document.getElementById("btnCadastrarFaixas").addEventListener("click", function () {
-        window.location.href = "CadstrarFaixa.html";
+        window.location.href = "CadastrarFaixa.html";
     });
 </script>
 
